RESOLVED FIXED298310
[GTK][WPE] Gamepad press buttons or axis events not triggered
https://bugs.webkit.org/show_bug.cgi?id=298310
Summary [GTK][WPE] Gamepad press buttons or axis events not triggered
Diego Pino
Reported 2025-09-03 02:18:38 PDT
How to reproduce: - Open https://hardwaretester.com/gamepad with WebKitGTK's or WPEWebKit's Minibrowser (Tools/Scripts/run-minibrowser --wpe --release https://hardwaretester.com/gamepad) - The website shows a gamepad. Using a connected gamepad, press a button or move the axis in the controller. Expected result: - The events are recognized and the corresponding button or axis is highlighted according to the mapping stated in https://www.w3.org/TR/gamepad/#remapping Actual result: - In the case of WPEWebKit, neither axis nor button events are triggered. - In the case of WebKitGTK, axis event is triggered but not button events. Results may vary depending on the gamepad used. In my case I've used a "Sega 6B Controller" gamepad.
Attachments
Diego Pino
Comment 1 2025-09-03 02:34:59 PDT
EWS
Comment 2 2025-09-05 05:03:46 PDT
Committed 299618@main (5dbec340da22): <https://commits.webkit.org/299618@main> Reviewed commits have been landed. Closing PR #50230 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-09-05 05:04:13 PDT
Note You need to log in before you can comment on or make changes to this bug.