Source/WebCore/platform/gamepad/manette/ManetteGamepad.cpp
@@ -49,7 +49,9 @@ static ManetteGamepad::StandardGamepadAxis toStandardGamepadAxis(uint16_t axis)
     default:
         break;
     }
-    return ManetteGamepad::StandardGamepadAxis::Unknown;
+    // In case could not map axis to a StandardGamepadAxis value, return
+    // a valid StandardGamepadAxis value anyway.
+    return static_cast<ManetteGamepad::StandardGamepadAxis>(axis % static_cast<size_t>(ManetteGamepad::StandardGamepadAxis::Count));
 }
 
 static void onAbsoluteAxisEvent(ManetteDevice* device, ManetteEvent* event, ManetteGamepad* gamepad)
@@ -102,7 +104,9 @@ static ManetteGamepad::StandardGamepadButton toStandardGamepadButton(uint16_t ma
     default:
         break;
     }
-    return ManetteGamepad::StandardGamepadButton::Unknown;
+    // In case could not map button to a StandardGamepadButton value, return
+    // a valid StandardGamepadButton value anyway.
+    return static_cast<ManetteGamepad::StandardGamepadButton>(manetteButton % static_cast<size_t>(ManetteGamepad::StandardGamepadButton::Count));
 }
 
 static void onButtonPressEvent(ManetteDevice* device, ManetteEvent* event, ManetteGamepad* gamepad)
@@ -154,9 +158,6 @@ ManetteGamepad::~ManetteGamepad()
 
 void ManetteGamepad::buttonPressedOrReleased(ManetteDevice*, StandardGamepadButton button, bool pressed)
 {
-    if (button == StandardGamepadButton::Unknown)
-        return;
-
     m_lastUpdateTime = MonotonicTime::now();
     m_buttonValues[static_cast<int>(button)].setValue(pressed ? 1.0 : 0.0);
 
@@ -165,9 +166,6 @@ void ManetteGamepad::buttonPressedOrReleased(ManetteDevice*, StandardGamepadButt
 
 void ManetteGamepad::absoluteAxisChanged(ManetteDevice*, StandardGamepadAxis axis, double value)
 {
-    if (axis == StandardGamepadAxis::Unknown)
-        return;
-
     m_lastUpdateTime = MonotonicTime::now();
     m_axisValues[static_cast<int>(axis)].setValue(value);
 
